syntax = "proto3";

option java_multiple_files = true;
option java_package = "com.hana.notification_service.grpc";
option java_outer_classname = "NotificationProto";

service NotificationService {
  rpc SendNotification(NotificationRequest) returns (NotificationResponse);
}

message NotificationRequest {
  string message = 1;
}

message NotificationResponse {
  string status = 1;
}
